--- a/app/groupattr/groupsattr-list.component.html
+++ b/app/groupattr/groupsattr-list.component.html
@@ -2,7 +2,7 @@
         <div class="col-lg-4">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                     <h3><span class="label label-primary">Доп.атрибуты</span></h3>                     
+                     <h3><span class="label label-primary">Добавить доп.атрибуты</span></h3>                     
                      <button class="btn btn-default" (click)="goToNewGroupAttr()"><i class="fa fa-pencil fa-lg"> создать</i></button>                     
                  </div>
                  <!-- /.panel-heading -->
