--- a/app/user/users-list.component.html
+++ b/app/user/users-list.component.html
@@ -30,6 +30,7 @@
                  </div>
              </div>
          </div>         
-             <usersattr-list></usersattr-list>             
+             <usersattr-list></usersattr-list>
+             <usersingroup-list></usersingroup-list>             
      </div>
 </div>
