--- a/app/app.component.html
+++ b/app/app.component.html
@@ -12,7 +12,7 @@
      <!-- /.navbar-header -->
      <ul class="nav navbar-top-links">
          <li>
-             <a href="" [routerLink]="['Dashboard']"><span class="glyphicon glyphicon-home" aria-hidden="true"></span></a>
+             <a (click)="setTitle('Главная :: FreeRadius Web Client')" href="" [routerLink]="['Dashboard']"><span class="glyphicon glyphicon-home" aria-hidden="true"></span></a>
          </li>
          <li class="pull-right">
              <a href="#"><i class="fa fa-user-secret fa-fw"></i></a>
@@ -34,12 +34,12 @@
                         <!-- /input-group -->
                      </li>
                      <li [class.active]="isCurrentRoute(['Users'])">
-                         <a href="" [routerLink]="['Users']"><i class="fa fa-user fa-fw"></i> 
+                         <a (click)="setTitle('Пользователи :: FreeRadius Web Client')" href="" [routerLink]="['Users']"><i class="fa fa-user fa-fw"></i> 
                             Пользователи                           
                          </a>
                      </li>
                      <li [class.active]="isCurrentRoute(['Groups'])">
-                         <a href="" [routerLink]="['Groups']"><i class="fa fa-group fa-fw"></i> Группы</a>
+                         <a (click)="setTitle('Группы :: FreeRadius Web Client')"href="" [routerLink]="['Groups']"><i class="fa fa-group fa-fw"></i> Группы</a>
                      </li>
                    </ul>
                </div>
