--- a/app/userattr/usersattr-list.component.html
+++ b/app/userattr/usersattr-list.component.html
@@ -1,7 +1,7 @@
 <div class="col-lg-4">
     <div class="panel panel-default">
         <div class="panel-heading">
-             <h3><span class="label label-info">Доп.атрибуты</span></h3>                    
+             <h3><span class="label label-info">Добавить доп.атрибуты</span></h3>                    
              <button class="btn btn-default" (click)="goToNewUserAttr()"><i class="fa fa-pencil fa-lg"> создать</i></button>                     
          </div>
          <!-- /.panel-heading -->
