--- a/app/group/group-edit.component.html
+++ b/app/group/group-edit.component.html
@@ -40,6 +40,12 @@
                           <div class="col-sm-10">
                               <input id="value" class="form-control" formControl="value" [(ngModel)]="group.value" #value="ngForm" required minlength="1" maxlength="253" placeholder="mypassword">
                           </div>
+                      </div>
+                      <div class="form-group">
+                          <label for="description" class="col-sm-2 control-label">Описание</label>
+                          <div class="col-sm-10">
+                              <textarea rows="2" id="description" class="form-control" formControl="description" [(ngModel)]="group.description" #description="ngForm" maxlength="253" placeholder="Jon Doe from nowhere"></textarea>
+                          </div>
                       </div>  
                       <div class="form-group">
                           <div class="col-sm-offset-2 col-sm-10">
@@ -74,6 +80,12 @@
                           <label class="col-sm-2 control-label">Значение</label>
                           <div class="col-sm-10">
                               <input class="form-control" placeholder="{{ group.value }}" readonly>       
+                          </div>
+                      </div>
+                      <div class="form-group">
+                          <label class="col-sm-2 control-label">Описание</label>
+                          <div class="col-sm-10">
+                              <textarea rows="2" class="form-control" placeholder="{{ group.description }}" readonly></textarea>       
                           </div>
                       </div>                     
                       <div class="form-group">
