--- a/app/useringroup/usersingroup-list.component.html
+++ b/app/useringroup/usersingroup-list.component.html
@@ -16,15 +16,15 @@
                         <i class="fa fa-square-o fa-stack-2x"></i>
                         <i class="fa fa-user fa-stack-1x"></i>
                     </span>
-                    <span> - {{ userInGroup.userName }} </span>
+                    <span class="label label-default">{{ userInGroup.userName }}</span>
                     <span>
                         <i class="fa fa-chevron-right"></i>                        
                     </span>
                     <span class="fa-stack fa-lg">
                         <i class="fa fa-square-o fa-stack-2x"></i>
                         <i class="fa fa-users fa-stack-1x"></i>
-                    </span> 
-                    <span> - {{ userInGroup.groupName }} </span>
+                    </span>
+                     <span class="label label-default">{{ userInGroup.groupName }}</span>                  
                  </a>
               </ul>
          </div>
