--- a/app/dashboard/dashboard.component.html
+++ b/app/dashboard/dashboard.component.html
@@ -6,7 +6,7 @@
 </div>
 <!-- /.row -->
  <div class="row">
-     <div class="col-lg-12">
+     <div class="col-lg-6">
          <div class="panel panel-default">
              <div class="panel-heading">
                  Создание элементов
@@ -18,13 +18,14 @@
                               <div class="list-group">
                                  <a href="" [routerLink]="['Users', 'UserAdd']" class="list-group-item">Новый пользователь</a>
                                  <a href="" [routerLink]="['Groups', 'GroupAdd']" class="list-group-item">Новая группа</a>
+                                 <a href="" [routerLink]="['Nases', 'NasAdd']" class="list-group-item">Новое устройство</a>
                               </div>
                           </form>
                       </div>
                   </div>
              </div>
-        </div>
-   </div>
+         </div>
+     </div>
  </div>
 
 
