--- a/app/user/user-detail.component.html
+++ b/app/user/user-detail.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-lg-12">
-        <h1 class="page-header">Пользователь {{ user.userName }}</h1>
+        <h1 class="page-header">Данные пользователя {{ user.userName }}</h1>
  </div>
     <!-- /.col-lg-12 -->
     <!-- /.row -->
@@ -38,6 +38,12 @@
                           <label class="col-sm-2 control-label">Значение</label>
                           <div class="col-sm-10">
                               <input class="form-control" placeholder="{{ user.value }}" readonly>       
+                          </div>
+                      </div>
+                      <div class="form-group">
+                          <label class="col-sm-2 control-label">Описание</label>
+                          <div class="col-sm-10">
+                              <textarea rows="2" class="form-control" placeholder="{{ user.description }}" readonly></textarea>       
                           </div>
                       </div>                     
                       <div class="form-group" [hidden]="confirmDelete">
