--- a/app/user/user-edit.component.html
+++ b/app/user/user-edit.component.html
@@ -1,7 +1,7 @@
 
 <div class="row">
     <div class="col-lg-12">
-        <h1 class="page-header">Редактирование пользователя {{ user.userName }}</h1>
+        <h1 class="page-header">Редактирование данных пользователя {{ user.userName }}</h1>
  </div>
     <!-- /.col-lg-12 -->
     <!-- /.row -->
@@ -40,7 +40,13 @@
                           <div class="col-sm-10">
                               <input id="value" class="form-control" formControl="value" [(ngModel)]="user.value" #value="ngForm" required minlength="6" maxlength="253" placeholder="mypassword">
                           </div>
-                      </div>  
+                      </div>
+                      <div class="form-group">
+                          <label for="description" class="col-sm-2 control-label">Описание</label>
+                          <div class="col-sm-10">
+                              <textarea rows="2" id="description" class="form-control" formControl="description" [(ngModel)]="user.description" #description="ngForm" maxlength="253" placeholder="Jon Doe from nowhere"></textarea>
+                          </div>
+                      </div>   
                       <div class="form-group">
                           <div class="col-sm-offset-2 col-sm-10">
                               <span><button type="button" class="btn btn-default" (click)="clearForm()"><i class="fa fa-eraser fa-lg"></i> очистить</button></span>                   
@@ -74,6 +80,12 @@
                           <label class="col-sm-2 control-label">Значение</label>
                           <div class="col-sm-10">
                               <input class="form-control" placeholder="{{ user.value }}" readonly>       
+                          </div>
+                      </div>
+                      <div class="form-group">
+                          <label class="col-sm-2 control-label">Описание</label>
+                          <div class="col-sm-10">
+                              <textarea rows="2" class="form-control" placeholder="{{ user.description }}" readonly></textarea>       
                           </div>
                       </div>                     
                       <div class="form-group">
