--- a/app/user/users-list.component.html
+++ b/app/user/users-list.component.html
@@ -24,13 +24,13 @@
                                 <i class="fa fa-square-o fa-stack-2x"></i>
                                 <i class="fa fa-user fa-stack-1x"></i>
                             </span>
-                            <span> - {{ user.userName }}</span>
+                            <span class="label label-default">{{ user.userName }}</span> | {{ user.description }}
                          </a>
                       </ul>
                  </div>
              </div>
          </div>         
-             <usersattr-list></usersattr-list>
-             <usersingroup-list></usersingroup-list>             
+             <usersingroup-list></usersingroup-list>
+             <usersattr-list></usersattr-list>                          
      </div>
 </div>
