--- a/app/nas/nas-detail.component.html
+++ b/app/nas/nas-detail.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-lg-12">
-        <h1 class="page-header">Сведения о сетевом устройстве {{ nas.nasName }}</h1>
+        <h1 class="page-header">Сведения о сетевом устройстве {{ nas.shortName }}</h1>
  </div>
     <!-- /.col-lg-12 -->
     <!-- /.row -->
@@ -8,7 +8,7 @@
         <div class="col-lg-6">
             <div class="panel" [ngClass]="confirmDelete? 'panel-danger' : 'panel-default'">
                 <div class="panel-heading">                    
-                     <span [hidden]="!confirmDelete"> Подтвердите удаление сетевого устройства {{ nas.nasName }}! </span>
+                     <span [hidden]="!confirmDelete"> Подтвердите удаление сетевого устройства {{ nas.shortName }}! </span>
                      <span>&nbsp;</span> 
                      <span [hidden]="confirmDelete"><button class="btn btn-default" (click)="goBack()"><i class="fa fa-arrow-circle-left fa-lg"></i></button></span>
                 </div>
@@ -41,9 +41,15 @@
                           </div>
                       </div>
                       <div class="form-group">
-                          <label class="col-sm-2 control-label">Пароль</label>
+                          <label class="col-sm-2 control-label">Секрет</label>
                           <div class="col-sm-10">
                               <input class="form-control" placeholder="{{ nas.secret }}" readonly>       
+                          </div>
+                      </div>
+                      <div class="form-group">
+                          <label class="col-sm-2 control-label">Сервер</label>
+                          <div class="col-sm-10">
+                              <input class="form-control" placeholder="{{ nas.server }}" readonly>       
                           </div>
                       </div>
                       <div class="form-group">
