--- a/app/user/user-edit.component.html
+++ b/app/user/user-edit.component.html
@@ -44,7 +44,7 @@
                       <div class="form-group">
                           <label for="description" class="col-sm-2 control-label">Описание</label>
                           <div class="col-sm-10">
-                              <textarea rows="2" id="description" class="form-control" formControl="description" [(ngModel)]="user.description" #description="ngForm" maxlength="253" placeholder="Jon Doe from nowhere"></textarea>
+                              <textarea rows="2" id="description" class="form-control" formControl="description" [(ngModel)]="user.description" #description="ngForm" required maxlength="253" placeholder="Jon Doe from nowhere"></textarea>
                           </div>
                       </div>   
                       <div class="form-group">
