update to angular2-RC3

--- a/app/dashboard/dashboard.component.html
+++ b/app/dashboard/dashboard.component.html
@@ -9,15 +9,15 @@
      <div class="col-lg-6">
          <div class="panel panel-default">
              <div class="panel-heading">
-                 Создание элементов
+                 Создать
              </div>
              <div class="panel-body">
                  <div class="row">
                      <div class="col-lg-6">
                          <form role="form">
                               <div class="list-group">
-                                 <a href="" [routerLink]="['Users', 'UserAdd']" class="list-group-item">Новый пользователь</a>
-                                 <a href="" [routerLink]="['Groups', 'GroupAdd']" class="list-group-item">Новая группа</a>
+                                 <a href="" [routerLink]="['Users', 'UserAdd']" class="list-group-item">Нового пользователя</a>
+                                 <a href="" [routerLink]="['Groups', 'GroupAdd']" class="list-group-item">Новую группу</a>
                                  <a href="" [routerLink]="['Nases', 'NasAdd']" class="list-group-item">Новое устройство</a>
                               </div>
                           </form>
