--- a/app/nas/nas-add.component.html
+++ b/app/nas/nas-add.component.html
@@ -62,7 +62,7 @@
                       <div class="form-group">
                           <label for="description" class="col-sm-2 control-label">Описание</label>
                           <div class="col-sm-10">
-                              <textarea rows="2" id="description" class="form-control" formControl="description" [(ngModel)]="nas.description" #description="ngForm" required maxlength="200" placeholder="Radius client switch"></textarea>
+                              <textarea rows="2" id="description" class="form-control" formControl="description" [(ngModel)]="nas.description" #description="ngForm" required maxlength="200" placeholder="New radius client"></textarea>
                           </div>
                       </div>  
                       <div class="form-group">
