--- a/app/nas/nas-edit.component.html
+++ b/app/nas/nas-edit.component.html
@@ -61,7 +61,7 @@
                       <div class="form-group">
                           <label for="description" class="col-sm-2 control-label">Описание</label>
                           <div class="col-sm-10">
-                              <textarea rows="2" id="description" class="form-control" formControl="description" [(ngModel)]="nas.description" #description="ngForm" required maxlength="200" placeholder="Switch on second floore"></textarea>
+                              <textarea rows="2" id="description" class="form-control" formControl="description" [(ngModel)]="nas.description" #description="ngForm" required maxlength="200" placeholder="Radius client"></textarea>
                           </div>
                       </div>
                       <div class="form-group">
